package ikab.dev.mastermind.models;

public enum StateValue {
    INITIAL,
    IN_GAME,
    RESUME,
    EXIT

}
